# CodeCollector

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  code_collector.py  config.yaml  docker-compose.yml  pyproject.toml  requirements.txt
app/: main.py
